fix z-index for index.html

--- a/src/pages/css/header.css
+++ b/src/pages/css/header.css
@@ -106,7 +106,7 @@ header a{
   width: 100%;
   display: none;
   position: fixed;
-  z-index: 1;
+  z-index: 3;
   top: 0;
   left: 0;
   background-color: rgb(0,0,0);
