--- a/src/pages/css/index.css
+++ b/src/pages/css/index.css
@@ -95,7 +95,7 @@ body a{
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.8);
-  z-index: 1000;
+  z-index: 2;
   display: none;
 }
 
@@ -221,7 +221,7 @@ hr {
   border: 1px solid var(--color-brown-400);
   padding: 20px;
   border-radius: 10px;
-  z-index: 1000; /* added z-index */
+  z-index: 2; /* added z-index */
   font-size: 18px;
   width: 250px;
   transform: translateX(100%);
